tests/positive/maps/literal/input.ci
void main() {
    int[string] scores = ["alice": 10, "bob": 7, "carol": 3];
    print(toString(mapSize(scores)) + "\n");
    print(toString(scores["bob"]) + "\n");
}
