tests/negative/runtime/arrayinsert_past_end/input.ci
void main() {
    int[] xs = [1];
    arrayInsert(xs, 2, 9);
}
